--- a/defense/presentation.tex
+++ b/defense/presentation.tex
@@ -416,18 +416,40 @@ cross/.default={1pt}}
 
 
 \begin{frame}[c]{High-aspect ratio resistive pulse sensing---motivation}
+ 	\begin{itemize}
+ 		\item Aspherical particles are ubiquitous in biology---e.g., many viruses and bacteria are approximately rod-shaped
+ 	\end{itemize}
+
+
+	\begin{columns}[t]
+		\begin{column}[T]{2.5in}
+			{\centering
+				\includegraphics[height=2.25cm]{ecoli} \\
+				e. coli \\
+				$L\sim \SI{2}{\mu m}$ \\
+				\par
+			}
+		\end{column}
+		
+		
+		\begin{column}[T]{2.5in}
+			{\centering
+				\includegraphics[height=2.25cm]{tobaccomosaicvirus} \\
+				tobacco mosaic virus \\
+				$L\sim \SI{300}{nm}$ \\
+				\par
+			}
+		\end{column}
+	
+
+	\end{columns}
+
 	\begin{itemize}
-		\item Aspherical particles are ubiquitous in biology---e.g., viruses, bacteria 
-		\item RP sensing allows volume determination
-		\item Can we extend RP to measure length?
-		\item How would we do so?
-	\end{itemize}
-	{\centering
-		\includegraphics[height=3cm]{ecoli}
-		\hspace{1cm}
-		\includegraphics[height=3cm]{tobaccomosaicvirus}
-		\par
-	}
+		\item The ability to measure particle shape is highly desirable for sensing applications
+ 		\item How can we extend RP sensing to measure length in addition to volume?
+ 	\end{itemize}
+	
+
 \end{frame}
 
 
@@ -439,9 +461,9 @@ cross/.default={1pt}}
 
 \begin{frame}[c]{Resistive pulse in non-constant width pores}
 	\begin{itemize}
-		\item Change in resistance of pore is approximately
+		\item Consider the RP amplitude for translocation through non-uniform pores
 	\end{itemize}
-	$$ \Delta R\left(z'\right)=\frac{\rho}{\pi}\int_{z=z'}^{z=z'+l_{p}}\frac{dz}{r_{P}^{2}\left(z\right)-s_{p}^{2}\left(z\right)} $$
+	$$ \Delta R\left(z'\right)=\frac{\rho}{\pi}\left[\int_{z=z'}^{z=z'+l_{p}}\left(\frac{1}{r_{P}^{2}\left(z\right)-s_{p}^{2}\left(z\right)}-\frac{1}{r_{P}\left(z\right)^{2}}\right)dz\right] $$
 	\begin{itemize}
 		\item RP amplitude is a function of the pore geometry \textbf{local to the particle's position}
 		\item Particles map the interior of the pore during translocation with their RP signal!
@@ -451,8 +473,7 @@ cross/.default={1pt}}
 		\includegraphics[width=2in]{particlesreveal.png} \\
 		\par
 	}
-	
-	
+
 	
 \end{frame}
 
@@ -464,15 +485,31 @@ cross/.default={1pt}}
 \begin{frame}[c]{Resistive pulse in non-constant width pores}
 	\begin{itemize}
 		\item For particles with length shorter than characteristic length of changes in pore size, the interior is mapped with high resolution
-		\item Long particles map pore interiors with low resolution because their lengths extend along multiple features
+		\item Long particles map pore interiors with low resolution because their lengths extend across multiple features
 	\end{itemize}
-	
+	\vspace{.1in}
+	$$ \Delta R\left(z'\right)=\frac{\rho}{\pi}\left[\int_{z=z'}^{z=z'+l_{p}}\left(\frac{1}{r_{P}^{2}\left(z\right)-s_{p}^{2}\left(z\right)}-\frac{1}{r_{P}\left(z\right)^{2}}\right)dz\right] $$
+	\vspace{.1in}
 	{\centering
+		Simulated resistive pulses of short and long rods \\
+		\vspace{.1in}
 		\includegraphics[height=1.05in]{rod_convolution.png}
-		\hspace{.1in}
-		\includegraphics[height=1.25in]{rod_simulated_labeled.png}
+		\hspace{.4in}
+		\includegraphics[height=1.05in]{rod_simulated_labeled.png}
 		\par
 	}
+	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Qualitative length measurement
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}[c]{Qualitative length measurement with resistive pulse}
+	\begin{itemize}
+		\item The 'resolution' of a resistive pulse signal provides a means of qualitatively determining particle length
+		\item Short particles of known length can provide a high resolution mapping to compare with
+		\item Qualitatively, the signals of longer particles should appear similar to the signals of shoter particles, but `smoothed out'
 	
 \end{frame}
 
