--- a/dissertation/chapter1.tex
+++ b/dissertation/chapter1.tex
@@ -5,7 +5,7 @@
 \label{chap:intro}
 
 
-	The introduction to this dissertation is structured as follows. First, we introduce the main topic of this dissertation and of my PhD research work, the nanopore. This section serves to introduce the reader first, to the basic definition of a nanopore and then to some of their applications, in addition to miscellaneous facts about nanopores that provide context for why they are of interest to scientists. This section is entirely qualitative and does not aim to make any statements about the underlying physics needed to understand nanopore systems. Subsequently, I introduce in three stages the physics that is relevant to nanopore systems. It turns out that if we take a macroscaled system (say, a tube rather than a nanotube) and slowly shrink it in size, then as the system size shrinks new types of physics emerges and become increasingly relevant to the system. We will start by addressing the relevant physics at the milliscale and shrink in intervals of powers of three, stopping at the sub-nanoscale. Therefore, the progression looks like milli-, micro-, nano-, and finally, sub-nano-. To provide a bigger picture of the journey through different length scales, the progression looks like ant, cell, protein, molecule.
+	The introduction to this dissertation is structured as follows. First, we introduce nanopores, systems which I spent much of my PhD studying, and the focus of research in the Siwy lab. This section serves to introduce the reader first, to the basic definition of a nanopore and then to some of their applications, in addition to a variety of facts about nanopores that provide context for why they are of interest to scientists. This section is entirely qualitative and does not aim to make any statements about the underlying physics needed to understand nanopore systems. Subsequently, I introduce in three stages the physics that is relevant to nanopore systems. It turns out that if we take a macroscaled system (say, a tube rather than a nanotube) and slowly shrink it in size, then as the system size shrinks new types of physics emerges and become increasingly relevant to the system. We will start by addressing the relevant physics at the milliscale and shrink in intervals of powers of three, stopping at the sub-nanoscale. Therefore, the progression looks like milli-, micro-, nano-, and finally, sub-nano-. To provide a bigger picture of the journey through different length scales, the progression looks like ant, cell, protein, molecule.
 
 	\section{Nanopores}
 
@@ -17,13 +17,13 @@
 		\end{definition}
 
 
-		As we will discover, this definition, while accurate, does not do justice to the field of nanopore research. 
+		As we will discover, this definition, while accurate, does little justice to the field of nanopore research. 
 
-		Nanopores generally belong to two classes, biological and synthetic. Because nanopores can be found in biology, many scientists are interested in studying them in their own right, to better understand how biological systems function. On the other hand, nanopores, both biological and synthetic, can be used in a surprisingly large variety of applications, with the total count of such applications constantly increasing. In this section we will briefly discuss the types of biological nanopores and where they are found in nature, and then move on to describing different types of synthetic nanopores. Given the loose criteria required by \ref{def:nanopore} for something to constitute a nanopore, listing off every type of either biological or synthetic nanopores would be impossible; instead, I seek to introduce the most relevant types, with an admitted bias towards the types of nanopores I am most familiar with and that I have worked with in my research. After discussing the various types of nanopores, I will give a summary of applications in which nanopores see use. Some of these applications, for instance resistive-pulse sensing, are a major part of this dissertation and will therefore be discussed in much greater detail later on, while others, such as DNA sequencing, are important enough to be mentioned but not discussed in significant detail later on. An extensive list of references, including those not explicitly referenced in this work, will be included should the reader wish to read more on a particular topic.
+		Nanopores generally belong to two classes, biological and synthetic. Because nanopores can be found in biology, many scientists are interested in studying them to gain a better understanding of their role in cellular processes. On the other hand, nanopores, both biological and synthetic, can be used in a surprisingly large variety of applications, with the total count of such applications constantly increasing. In this section we will briefly discuss the types of biological nanopores and where they are found in nature, and then move on to describing different types of synthetic nanopores. Given the loose criteria required by definition \ref{def:nanopore} for something to be considered a nanopore, listing off every type of either biological or synthetic nanopores would be impossible; instead, I seek to introduce the most relevant types, with an admitted bias towards the types of nanopores I am most familiar with and that I have worked with in my research. After discussing the various types of nanopores, I will give a summary of some of the applications in which nanopores see use. Some of these applications, for instance resistive-pulse sensing, are a major part of this dissertation and will therefore be discussed in much greater detail later on. Other applications, such as DNA sequencing, are important enough to be mentioned but not discussed in significant detail. An extensive list of references, including those not explicitly referenced in this work, will be included should the reader wish to read more on a particular topic.
 
 		\begin{figure}[h]
 			\includegraphics[width=\textwidth]{bio_synth_nanopores.png}
-			\caption{Two types of nanopores. \textbf{Left:} Alpha-hemolysin, a biological type of nanopore approximately $\SI{1}{nm}$ in diameter. \textbf{Right:} A silicon nitride nanopore drilled using a transmission electron microscope (TEM), approximately $\SI{10}{nm}$ in diameter.}
+			\caption{Two types of nanopores. \textbf{Left:} $\alpha$-hemolysin, a biological type of nanopore approximately $\SI{1}{nm}$ in diameter. \textbf{Right:} A silicon nitride nanopore drilled using a transmission electron microscope (TEM), approximately $\SI{10}{nm}$ in diameter.}
 		\end{figure}
 
 		\subsection{Biological nanopores}
